objects/PortalBanner__c.object
<CustomObject>
    <fields>
        <fullName>Alt__c</fullName>
        <inlineHelpText>Alt text will be used for the Spots images.</inlineHelpText>
        <label>Alt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Type__c</fullName>
        <label>Banner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Top Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MarComm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Org__c</fullName>
        <label>Business Org</label>
        <picklist>
            <picklistValues>
                <fullName>Comatrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turolla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valmova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <picklist>
            <controllingField>Object__c</controllingField>
            <picklistValues>
                <fullName>Announcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Presentation Archives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-Signature Guidelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explore Ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Image Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Handbook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need A Logo?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Releases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing &amp; Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Information Bulletin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional Items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unique Selling Points Handbooks</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Type_to_Query__c</fullName>
        <label>Content Type to Query</label>
        <picklist>
            <picklistValues>
                <fullName>Announcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assembly Specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Presentations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Let&apos;s Torque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Information Bulletin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Bulletin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unique Selling Points Handbook</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Idea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <description>Page where the record will be displayed.</description>
        <label>Page</label>
        <picklist>
            <picklistValues>
                <fullName>ImageBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InformationHub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LogoBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MarketingToolbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PartnerPortalHome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottom Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottom Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <picklist>
            <picklistValues>
                <fullName>24 PIN Transparent Microcontrollers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 PIN Transparent Microcontrollers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CG150 CAN/USB gateway interface communicator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS1000 Slope Sensor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danfoss Reverse Displacement Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDC20 20cm3 Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DH 80cm3 Orbital Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS 160cm3 Orbital Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSW Orbital Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHF Electrohydraulic Boxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHPS-2 Steering Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHPS OLS320 Steering Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHPS Steering Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHSC Electrohydraulic Boxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHS Electrohydraulic Boxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EH Steering Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMD Speed Sensor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan Drive Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan Drive Controller - mounted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H1 110cm3 Bent Axis Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H1 115cm3 Pump AC with wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H1 115cm3 Pump with EDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H1 147/165cm3 Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H1 147/165cm3 Pump with EDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H1 147/165cm3 Pump with ISL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H1 160cm3 Bent Axis Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H1 250cm3 Bent Axis Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H1 250cm3 Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H1 45/53cm3 and 69/78cm3 Pump with EDC</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>default</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Portal Banner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Business_Org__c</columns>
        <columns>NAME</columns>
        <columns>Position__c</columns>
        <columns>Region__c</columns>
        <columns>Link__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Banners</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Position__c</columns>
        <columns>Link__c</columns>
        <columns>Business_Org__c</columns>
        <columns>Region__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Component_Type__c</columns>
        <columns>Page__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Portal Banner Types</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Americas_and_Default_PartnerLink</fullName>
        <columns>NAME</columns>
        <columns>Banner_Type__c</columns>
        <columns>Component_Type__c</columns>
        <columns>Position__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Americas,default</value>
        </filters>
        <filters>
            <field>Business_Org__c</field>
            <operation>notEqual</operation>
            <value>Comatrol,Turolla,Valmova</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Spot</value>
        </filters>
        <label>Americas and Default PartnerLink</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Integrated_Only</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Component_Type__c</columns>
        <columns>Content_Type_to_Query__c</columns>
        <columns>Position__c</columns>
        <columns>Region__c</columns>
        <columns>Business_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Org__c</field>
            <operation>equals</operation>
            <value>Integrated</value>
        </filters>
        <label>Integrated Only</label>
        <language>en_US</language>
        <sharedTo>
            <group>Danfoss_PS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarketingToolbox</fullName>
        <columns>NAME</columns>
        <columns>Component_Type__c</columns>
        <columns>Position__c</columns>
        <columns>Link__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>Page__c</columns>
        <columns>Object__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Page__c</field>
            <operation>equals</operation>
            <value>MarketingToolbox,ImageBank,InformationHub,LogoBank,PartnerPortalHome</value>
        </filters>
        <label>Marketing Toolbox</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Banner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Banners</pluralLabel>
    <recordTypes>
        <fullName>Marketing_Panel</fullName>
        <active>true</active>
        <description>Panel used on the Marketing Toolbox Page</description>
        <label>Marketing Panel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Page_Information</fullName>
        <active>true</active>
        <description>Stores information displayed on a VisualForce Page in the portal</description>
        <label>Page Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>Panel</fullName>
        <active>true</active>
        <description>Configure panel widgets on a portal custom visual force home page</description>
        <label>Panel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Spots</fullName>
        <active>true</active>
        <description>Spots - Marketing call outs</description>
        <label>Spots</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tools</fullName>
        <active>true</active>
        <description>Portal Banner used for the Tools VisualForce Page</description>
        <label>Tools</label>
    </recordTypes>
    <recordTypes>
        <fullName>Top_Banner</fullName>
        <active>true</active>
        <description>Top Banner by Region</description>
        <label>Top Banner</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Must_Select_one_or_more_values</fullName>
        <active>true</active>
        <description>Must Select one or more values for ‘Content Type to Query’ if ‘Object’ = Content</description>
        <errorConditionFormula>AND(ISBLANK(Content_Type_to_Query__c), TEXT(Object__c) == &apos;Content&apos;)</errorConditionFormula>
        <errorDisplayField>Content_Type_to_Query__c</errorDisplayField>
        <errorMessage>Please specify Content Type to Query.</errorMessage>
    </validationRules>
</CustomObject>